fix header responsive z-index

--- a/app/static/app/css/_header.sass
+++ b/app/static/app/css/_header.sass
@@ -60,6 +60,7 @@
                     width: 170px
                     background-color: $color-bg-light
                     transition-duration: $transition-duration
+                    z-index: 2
 
                     &.open
                         right: 0
