--- a/app/static/app/css/ranking.css
+++ b/app/static/app/css/ranking.css
@@ -153,6 +153,7 @@
     width: 170px;
     background-color: #17181D;
     transition-duration: 0.3s;
+    z-index: 2;
   }
   #header nav:not(.landing) .menu-wrapper.open {
     right: 0;
